MDEV-37666 Global temporary table can be created w/ versioning using CREATE LIKE

Turns out, alter_info->flags is not set by mysql_prepare_alter_table.
* Use create_info->options instead.

The same problem affects foreign keys. There is no single field to
check, so we'd need to loop through the keys in this case.
The same is already done for partitioning.
* Extraxt the key check-loop into Alter_info::has_foreign_keys
* Use it for partitions and global temporary tables check

Parent issue:
MDEV-35915 Implement Global temporary tables